--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-include setup.py README.* MANIFEST.in LICENSE
 recursive-include wjordpress *
+recursive-exclude wjordpress/tests *
 global-exclude *.pyc
