add basic coverage support

--- a/tox.ini
+++ b/tox.ini
@@ -9,14 +9,18 @@ skipsdist = True
 setenv =
     PYTHONPATH = {toxinidir}
     ENVIRONMENT = test
-commands = {envpython} example_project/manage.py test wjordpress
 deps =
+    coverage==3.7.1
     dj-database-url==0.3.0
     project-runpy==0.3.0
     django-extensions==1.3.8
     requests==2.3.0
     factory-boy==2.4.1
     mock==1.0.1
+commands =
+    coverage erase
+    coverage run example_project/manage.py test wjordpress
+    coverage report
 
 [testenv:py27django16]
 basepython=python2.7
