--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ env:
   - TOX_ENV=py27django16
   - TOX_ENV=py33django16
   - TOX_ENV=py34django16
-install: "pip install tox"
+install:
+  - pip install tox coveralls
 script: tox -e $TOX_ENV
+after_success: coveralls
