--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ deps =
     coverage==3.7.1
     dj-database-url==0.3.0
     project-runpy==0.3.0
-    django-extensions==1.3.8
+    six==1.7.3
     requests==2.3.0
     factory-boy==2.4.1
     mock==1.0.1
