--- a/.coveragerc
+++ b/.coveragerc
@@ -1,5 +1,5 @@
 [run]
 source = wjordpress
-omit = */admin.py, */tests/*, */migrations/*, */management/commands/*
+omit = */admin.py, */tests/*, */migrations/*, */management/commands/*, */dj_exten_jsonfield.py
 
 [report]
