--- a/.coveragerc
+++ b/.coveragerc
@@ -3,3 +3,7 @@ source = wjordpress
 omit = */admin.py, */tests/*, */migrations/*, */management/commands/*, */dj_exten_jsonfield.py
 
 [report]
+exclude_lines =
+    pragma: no cover
+    __repr__
+    __unicode__
