try to speed up tox by only running coverage once

--- a/tox.ini
+++ b/tox.ini
@@ -18,15 +18,17 @@ deps =
     factory-boy==2.4.1
     mock==1.0.1
 commands =
-    coverage erase
-    coverage run example_project/manage.py test wjordpress
-    coverage report
+    {envpython} example_project/manage.py test wjordpress
 
 [testenv:py27django16]
 basepython=python2.7
 deps =
     {[testenv]deps}
     django>=1.6,>1.5
+commands =
+    coverage erase
+    coverage run example_project/manage.py test wjordpress
+    coverage report
 
 [testenv:py33django16]
 basepython=python3.3
