--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,7 @@ deps =
     requests==2.3.0
     factory-boy==2.4.1
     mock==1.0.1
+    responses==0.2.2
 commands =
     {envpython} example_project/manage.py test wjordpress
 
