fix tox found wrong django version and freshen requirements

--- a/tox.ini
+++ b/tox.ini
@@ -12,12 +12,12 @@ setenv =
 deps =
     coverage==3.7.1
     dj-database-url==0.3.0
-    project-runpy==0.3.0
-    six==1.7.3
-    requests==2.3.0
+    project-runpy==0.3.1
+    six==1.8.0
+    requests==2.4.3
     factory-boy==2.4.1
     mock==1.0.1
-    responses==0.2.2
+    responses==0.3.0
 commands =
     {envpython} example_project/manage.py test wjordpress
 
@@ -25,7 +25,7 @@ commands =
 basepython=python2.7
 deps =
     {[testenv]deps}
-    django>=1.6,>1.5
+    django>=1.6,<1.7
 commands =
     coverage erase
     coverage run example_project/manage.py test wjordpress
@@ -35,10 +35,10 @@ commands =
 basepython=python3.3
 deps =
     {[testenv]deps}
-    django>=1.6,>1.5
+    django>=1.6,<1.7
 
 [testenv:py34django16]
 basepython=python3.4
 deps =
     {[testenv]deps}
-    django>=1.6,>1.5
+    django>=1.6,<1.7
