--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
-Django==1.6.5
+Django==1.6.8
 dj-database-url==0.3.0
-requests==2.3.0
+requests==2.4.3
 
 # for Heroku support
-psycopg2==2.5.3
-gunicorn==19.0.0
+psycopg2==2.5.4
+gunicorn==19.1.1
 whitenoise==1.0.3
-raven==5.0.0
+raven==5.1.1
 
 # support
 coverage==3.7.1
-project-runpy==0.3.0
-django-extensions==1.3.10
+project-runpy==0.3.1
+django-extensions==1.4.6
 factory-boy==2.4.1
 mock==1.0.1
-pytz==2014.4
-six==1.7.3
-responses==0.2.2
+pytz==2014.9
+six==1.8.0
+responses==0.3.0
+tox==1.8.1
